--- a/petclinic/web-app/css/petclinic.css
+++ b/petclinic/web-app/css/petclinic.css
@@ -111,7 +111,7 @@ li {
 }
 
 li ul {
-	list-style: square url(images/sub-bullet.gif);
+	list-style: disc url(../images/bullet-arrow.png);
 }
 
 li ul li ul {
